# gentoolkit

./: .gitignore  .gitignorerevs  AUTHORS  AUTHORS.gentoolkit-dev  CONTRIBUTING.md  ChangeLog  DEVELOPING  MANIFEST.in  Makefile  Makefile.skel  NEWS  README  README.Developer  README.dev  README.md  THANKS  TODO  makedefs.mak  meson.build  meson_options.txt  pylintrc  pyproject.toml  release.sh  setup.py  tox.ini
.github/workflows/: ci.yml  flake.yml
change/: ChangeLog
cmdtests/: README.txt  cmds.txt  runtests.sh
data/: meson.build
data/eclean/: distfiles.exclude
data/tmpfiles.d/: revdep-rebuild.conf
dep-clean/: ChangeLog
deprecated/change/: change
deprecated/dep-clean/: AUTHORS  dep-clean.1
deprecated/dev-scripts/: README
deprecated/distfiles-clean/: ChangeLog
deprecated/epkginfo/: AUTHORS  README
deprecated/epkgmove/: ChangeLog
deprecated/etcat/: ChangeLog  README
deprecated/gensync/: ChangeLog  bmg-main.syncsource  gensync
deprecated/lintool/lintool/: ebuild.py
deprecated/old-scripts/: mkebuild.1
dev-scripts/: linking_libs.sh
ebump/: AUTHORS  Makefile  README
epkgmove/: Makefile  README  epkgmove
genpkgindex/: genpkgindex.1
gensync/: TODO
gentoolkit/: CREDITS  ChangeLog  DEVELOPING  TODO
gentoolkit-dev/: ChangeLog  README
gentoolkit/data/: 99gentoolkit-env
gentoolkit/man/: epkginfo.1  equery.1  glsa-check.1
lintool/: ChangeLog  lintool.py
man/: analyse.1  ebump.1  eclean.1  enalyze.1  epkginfo.1  equery.1  eread.1  eshowkw.1  euse.1  glsa-check.1  imlate.1  meson.build  revdep-rebuild.1
old-scripts/: Makefile
pkg-clean/: pkg-clean
pym/: analyse  meson.build
pym/gentoolkit/: __init__.py  atom.py  base.py  cpv.py  dbapi.py  dependencies.py  eprefix.py  errors.py  flag.py  formatters.py  helpers.py  helpers2.py  keyword.py  meson.build  metadata.py  module_base.py  package.py  pprinter.py  profile.py  query.py  sets.py  textwrap_.py  versionmatch.py
pym/gentoolkit/analyse/: __init__.py  analyse.py  base.py  lib.py  output.py  rebuild.py
pym/gentoolkit/deprecated/: helpers.py
pym/gentoolkit/eclean/: __init__.py  clean.py  cli.py  exclude.py  meson.build  output.py  pkgindex.py  search.py
pym/gentoolkit/ekeyword/: .pylintrc  Makefile  README  ekeyword.py  ekeyword_unittest.py  meson.build  pylint  pytest.ini  test_ekeyword.py
pym/gentoolkit/ekeyword/tests/: meson.build  process-1.ebuild
pym/gentoolkit/ekeyword/tests/profiles/arch-only/profiles/: arch.list
pym/gentoolkit/ekeyword/tests/profiles/arches-desc/profiles/: arches.desc
pym/gentoolkit/ekeyword/tests/profiles/profiles-only/profiles/: profiles.desc
pym/gentoolkit/enalyze/: __init__.py  analyze.py  base.py  lib.py  meson.build  output.py  rebuild.py
pym/gentoolkit/equery/: __init__.py  belongs.py  changes.py  check.py  depends.py  depgraph.py  files.py  has.py  hasuse.py  keywords.py  list_.py  meson.build  meta.py  size.py  uses.py  which.py
pym/gentoolkit/eshowkw/: __init__.py  display_pretty.py  keywords_content.py  keywords_header.py  meson.build
pym/gentoolkit/glsa/: __init__.py
pym/gentoolkit/imlate/: imlate  imlate.1  imlate.py  meson.build
pym/gentoolkit/merge_driver_ekeyword/: merge_driver_ekeyword.py  meson.build  pytest.ini  test_merge_driver_ekeyword.py
pym/gentoolkit/merge_driver_ekeyword/tests/: Makefile  meson.build
pym/gentoolkit/merge_driver_ekeyword/tests/multiple-KEYWORDS-conflict/: A.ebuild  B.ebuild  expected.ebuild
pym/gentoolkit/merge_driver_ekeyword/tests/non-KEYWORDS-conflict/: A.ebuild  B.ebuild
pym/gentoolkit/merge_driver_ekeyword/tests/same-keyword-conflict/: expected.ebuild
pym/gentoolkit/merge_driver_ekeyword/tests/single-KEYWORDS-conflict/: A.ebuild  B.ebuild  expected.ebuild
pym/gentoolkit/revdep_rebuild/: __init__.py  analyse.py  assign.py  cache.py  collect.py  meson.build  rebuild.py  revdep-rebuild.py  revdep_rebuild.kdev4  runner.py  settings.py  stuff.py  test.py
pym/gentoolkit/test/: __init__.py  meson.build  test_atom.py  test_cpv.py  test_dependencies.py  test_helpers.py  test_keyword.py  test_profile.py  test_query.py  test_syntax.py
pym/gentoolkit/test/eclean/: Packages  __init__.py  creator.py  distfiles.exclude  distsupport.py  meson.build  test_clean.py  test_search.py
pym/gentoolkit/test/equery/: __init__.py  meson.build  test_init.py
pym/gentoolkit/tests/: test_helpers2.py  test_template.py
pym/gentoolkit/tests/equery/: test_init.py
qpkg/: ChangeLog  Makefile
refs/heads/: master
refs/tags/: gentoolkit-0.4.7  gentoolkit-0.5.1  gentoolkit-0.6.10  gentoolkit-0.6.11  gentoolkit-0.6.2  gentoolkit-0.6.3  gentoolkit-0.6.4  gentoolkit-0.6.5  gentoolkit-0.6.6  gentoolkit-0.6.7  gentoolkit-0.6.8  gentoolkit-0.6.9
src/change/: AUTHORS  README
src/dep-clean/: dep-clean
src/dev-scripts/: included_headers.sh
src/distfiles-clean/: distfiles-clean
src/ebump/: AUTHORS  Makefile  README  ebump  ebump.1
src/echangelog/: AUTHORS  Makefile  README  echangelog  echangelog.pod
src/eclean/: ChangeLog  Makefile  THANKS  TODO  eclean
src/ego/: Makefile  ego
src/ekeyword/: .pylintrc  AUTHORS  ChangeLog  Makefile  README  ekeyword  ekeyword.pod  ekeyword.py  ekeyword_unittest.py
src/epkginfo/: epkginfo.1
src/equery/: Makefile  equery  equery.1
src/eshowkw/: eshowkw  eshowkw.1
src/etc-update/: Makefile  etc-update  etc-update.1
src/etcat/: AUTHORS
src/euse/: AUTHORS  Makefile  euse
src/eviewcvs/: Makefile  eviewcvs.pod
src/gensync/: AUTHORS  Makefile  bmg-gnome-current.syncsource  gensync.1  gensync.conf
src/gentoolkit/: Makefile  README  __init__.py  errors.py  helpers.py  package.py
src/glsa-check/: Makefile  glsa-check  glsa-check.1  glsa.py
src/imlate/: Makefile  imlate  imlate.1
src/lintool/: AUTHORS  README
src/moo/: moo.1
src/old-scripts/: dep-clean  dep-clean.1  ewhich  ewhich.1  pkg-size
src/qpkg/: qpkg
src/revdep-rebuild/: 99revdep-rebuild  AUTHORS  README  TODO  revdep-rebuild  revdep-rebuild-sh  revdep-rebuild.1
src/useflag/: useflag.1
trunk/: AUTHORS  ChangeLog  Makefile  README  README.Developer  TODO  makedefs.mak  release.sh
(+216 files in other folders)
