[project]
name = 'gentoolkit'
dynamic = ['version']
description = 'Collection of administration scripts for Gentoo'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = "COPYING"}
authors = [
  {name = 'Gentoo Portage tools team', email = 'tools-portage@gentoo.org'},
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['-Dsystem-wide=false']
