
py.install_sources(
    [
		'__init__.py',
		'atom.py',
		'base.py',
		'cpv.py',
		'dbapi.py',
		'dependencies.py',
		'eprefix.py',
		'errors.py',
		'flag.py',
		'formatters.py',
		'helpers.py',
		'keyword.py',
		'module_base.py',
		'package.py',
		'pprinter.py',
		'profile.py',
		'query.py',
		'sets.py',
		'textwrap_.py',
		'versionmatch.py',
	],
    subdir : 'gentoolkit'
)

subdir('eclean')
subdir('ekeyword')
subdir('enalyze')
subdir('equery')
subdir('eshowkw')
subdir('imlate')
subdir('merge_driver_ekeyword')
subdir('revdep_rebuild')
subdir('test')
