py.install_sources(
    [
        '__init__.py',
        'test_atom.py',
        'test_cpv.py',
        'test_helpers.py',
        'test_keyword.py',
        'test_profile.py',
        'test_query.py',
        'test_syntax.py',
    ],
    subdir : 'gentoolkit/test'
)

subdir('eclean')
subdir('equery')
