install_data(
    [
        'process-1.ebuild',
        'profiles/arches-desc/profiles/arch.list',
        'profiles/arches-desc/profiles/arches.desc',
		'profiles/arches-desc/profiles/profiles.desc',
		'profiles/both/profiles/arch.list',
		'profiles/both/profiles/profiles.desc',
    ],
    preserve_path: true,
    install_dir : py.get_install_dir() / 'gentoolkit' / 'ekeyword' / 'tests'
)
