install_data(
    [
		'conflict-near-KEYWORDS/A.ebuild',
		'conflict-near-KEYWORDS/B.ebuild',
		'conflict-near-KEYWORDS/common-ancestor.ebuild',
		'conflict-near-KEYWORDS/expected.ebuild',
		'multiple-KEYWORDS-conflict/A.ebuild',
		'multiple-KEYWORDS-conflict/B.ebuild',
		'multiple-KEYWORDS-conflict/common-ancestor.ebuild',
		'multiple-KEYWORDS-conflict/expected.ebuild',
		'non-KEYWORDS-conflict/A.ebuild',
		'non-KEYWORDS-conflict/B.ebuild',
		'non-KEYWORDS-conflict/common-ancestor.ebuild',
		'single-KEYWORDS-conflict/A.ebuild',
		'single-KEYWORDS-conflict/B.ebuild',
		'single-KEYWORDS-conflict/common-ancestor.ebuild',
		'single-KEYWORDS-conflict/expected.ebuild',
    ],
    preserve_path: true,
    install_dir : py.get_install_dir() / 'gentoolkit' / 'merge_driver_ekeyword' / 'tests'
)
